Wed Mar 13 20:33:59 2002  Gary Wong  <gtw@research.att.com>

	* import.c (ParseSGGGame): Handle money sessions in SGG files
	(reported by Ned Cross).

	* gtkgame.c (GTKAddGame): Increase size of sz[], to avoid buffer
	overflow if the players have long names.

Wed Mar 13 11:13:16 2002  Gary Wong  <gtw@research.att.com>

	* gtkgame.c (ShowManual): New function.
	
	* Makefile.am: Add gtktexi.c.
	* configure.in: Use pkg-config to look for libxml2.

Tue Mar 12 17:24:31 2002  Gary Wong  <gtw@research.att.com>

	* acinclude.m4 (AM_GTK2): Look for GTK+ 2.0.
	* configure.in: Look for GTK+ 2.0 in preference to 1.2.

Mon Mar 11 22:53:26 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* rollout.c (RolloutGeneral): remove call to VarRednRollout. Use
	BasicCubefulRollout instead, since it handles multiple cubeinfo's
	and all.

Mon Mar 11 10:59:05 2002  Gary Wong  <gtw@research.att.com>

	* gtktheory.c (GraphExpose): New function.  Add another notebook
	page to the theory window with a diagram of the doubling windows.
	
	* gtkgame.c (CreateSetCubeDialog): Use GTK_WINDOW_TOPLEVEL instead
	of GTK_WINDOW_DIALOG, for compatibility with GTK+ 2.0.

Sat Mar  9 22:39:37 2002  Gary Wong  <gtw@research.att.com>

	* gtkboard.c (board_animate), gtkgame.c (GTKDelay): Don't allow
	key events while delaying/animating.

	* gtktexi.c, gtktexi.h: Make GtkTexi a subclass of GtkWidget.

Sat Mar  9 19:50:40 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* eval.c (getCurrentGammonRates, setMoneyPoints, getMatchPoints):
	new functions; well, their names says it all :-)
	Get current gammon rates, and calculate various points (take,
	double, too good etc) for money and match play.

	* gtktheory.c: new file. GTK theory widget for gammon prices and
	market windows.

	* show.c (CommandShowGammonPrice): call GTK widget.
	* show.c (CommandShowMarketWindow): call GTK widget. Move a lot of
	the code into subroutines, that can be called for both the CLI and
	GTK version. It is still possible to do some cleanup.

