@@ -110,6 +110,7 @@ extern void
 GTKResignHint( float arOutput[], float rEqBefore, float rEqAfter,
                cubeinfo *pci, int fMWC );
 extern void GTKSaveSettings( void );
+extern void GTKHelp( char *sz );
 
 extern int fTTY;
 
